--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -30,5 +30,9 @@ $tablet-max: 1023px;
 $table-min: 768px;
 $mobile-max: 767px;
 
+/*-----------------------------font family------------------------------*/
+$font-primary: 'Roboto', sans-serif;
+$font-secondary: Arial, Helvetica, sans-serif;
+
 /*-----------------------------custome variables------------------------*/
 //....
