--- a/base/_layout.scss
+++ b/base/_layout.scss
@@ -13,8 +13,8 @@ li{
 
 a{
   text-decoration: none;
-  color: $black;
+  color: inherit;
   &:hover, &:active{
-    color: $black;
+    color: inherit;
   }
 }
