--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -19,6 +19,7 @@ $sliver: #DDDDDD;
 $white: #ffffff;
 $whitesmoke: #f5f5f5;
 $black: #111111;
+$transparent: transparent;
 
 /*-----------------------------common sizes-----------------------------*/
 $container-width: 100%;
